OpenXR-MotionCompensation Changelog

Version 0.3.9.0

	Virtual Tracker:
	- enabled cor calibration outside of neutral rig postion
	
	Bugfixes:
	- corrected receorded translations to match local rig reference

Version 0.3.8.0
	
	Overlay:
	- added chroma keyed passthrough mode for overlay (usable in e.g. Virtual Desktop)
	
	FlyPT Mover:
	- fixed direction of linear mc when motion rig is rotated (was global, now locally aligned with rig orientaion)
	
	Miscellaneous:
	- allow COR manipulation while mc is activated
	- added version info to DLLs (and switched to 4 numbers in versioning scheme)
	
	Bugfixes:
	- fixed timeout for tracker connection loss in default (non-legacy) mode
	- fixed handling of action sync for games supporting controller interaction (caused crash to desktop in MSFS and DCS with input stabilizer active)
	- improved mutlithreading stability

Version 0.3.7
	
	Yaw Game Engine:
	- removed ability to use offset values from GE (necessary interface will be removed in upcoming GE version)
	
	Miscellaneous:
	- renamed user guide to README
	- added version info to dlls
	- removed outdated package dependency (fmt)
	
	Bugfixes:
	- fixed third party overlay placement (e.g. OpenKneeboard in iRacing)
	- downgraded build platform because latest seems to introduce (so far inexplicable) startup crash on some systems
	- improved graphical overlay stability
	- improved input stabilizer thread safety
	- minor log/trace output fixes

Version 0.3.6

	Optional support for x86 / 32-bit applications:
	- enabled compatibility older application without x64 executable (e.g. Richard Burns Rally)

	Bugfixes:
	- added workaround for audible error feedback in web browser

Version 0.3.5

	Physical tracker:
	- allow moving reference position via keyboard shortcuts

	Bugfixes:
	- fixed sway inversion on flypt reference tracker (was introduced at v0.3.4)

Version 0.3.4

	Input stabilizer (experimental)
	- temporal supersampling for tracker input